Prevent CSS rule overlap
`partners` class from _partners.scss was also (unintentionally) applied
to homepage

--- a/assets/scss/_homepage.scss
+++ b/assets/scss/_homepage.scss
@@ -70,7 +70,7 @@
   }
 
 
-  .partners {
+  .partners-homepage {
     text-align: center;
 
     .section-title {
